@@ -5,7 +5,6 @@ import com.model.datatype.MultipleChoice;
 import lombok.Getter;
 import lombok.Setter;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Getter
 @Setter
@@ -16,7 +15,7 @@ public class MultipleChoiceDTO {
     public MultipleChoiceDTO(MultipleChoice multipleChoice) {
         this.choices = multipleChoice.getData().stream()
                 .map(ChoiceDTO::new)
-                .collect(Collectors.toList());
+                .toList();
         this.type = multipleChoice.getType();
     }
 }
